--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <div class="scene">
-      <div class="space">
-        <div class="rocket_block">
-          <div class="rocket" style='left: -11vw;'>
-            <img class="rocket_img" src="https://raw.githubusercontent.com/vanechkaept/rocket-animation/main/images/rocket.png" />
-          </div>
-        </div>
 
-        <div class="planet_with_orbit">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <div class="scene">
+    <div class="space">
+      <div class="rocket_block">
+        <div class="rocket" style='left: -11vw;'>
+          <img class="rocket_img" src="https://raw.githubusercontent.com/vanechkaept/rocket-animation/main/images/rocket.png" />
+        </div>
+      </div>
+
+      <div class="planet_with_orbit">
+        <div class="planet">
           <img class="planet_img" src="https://raw.githubusercontent.com/vanechkaept/rocket-animation/main/images/earth.png" />
-          <div class="moon">
-            <img class="moon_img" src="https://raw.githubusercontent.com/vanechkaept/rocket-animation/main/images/moon.png" />
-          </div>
-          <div class="sputnic">
-            <img class="sputnic_img" src="https://raw.githubusercontent.com/vanechkaept/rocket-animation/main/images/sputnic.png" />
-          </div>
+        </div>
+        <div class="moon">
+          <img class="moon_img" src="https://raw.githubusercontent.com/vanechkaept/rocket-animation/main/images/moon.png" />
+        </div>
+        <div class="sputnic">
+          <img class="sputnic_img" src="https://raw.githubusercontent.com/vanechkaept/rocket-animation/main/images/sputnic.png" />
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-    <script src="main.js"></script>
-  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script src="main.js"></script>
+</body>
+
 </html>
